Sat Feb 13 23:18:43 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/DataSampleHeader.h:
        * dds/DCPS/DataSampleHeader.inl:
        * dds/DCPS/DataSampleHeader.cpp:

          Updated stream operators to provide output compatible with
          wireshark.

        * dds/DCPS/transport/multicast/ReliableSession.h:

          Moved SubMessageId enum to DataSampleHeader; we need a single
          place to maintain Sub-Message IDs.

        * tools/odds_dissector/odds_dissector.cpp:
        * tools/odds_dissector/odds_plugin.cpp:

          Finalized dissector plugin for wireshark.

Sat Feb 13 00:47:20 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/DataSampleHeader.h:
        * dds/DCPS/DataSampleHeader.cpp:

          Promoted init to public scope; this allows a sample header
          to be initialized with an ACE_Message_Block without making an
          extraneous copy.

          Updated stream operators to provide output compatible with
          wireshark.

Fri Feb 12 22:30:32 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/odds_plugin.cpp:

          Added missing line terminator.

Fri Feb 12 22:26:29 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/framework/TransportHeader.h:

          Promoted init to public scope; this allows a transport header
          to be initialized with an ACE_Message_Block without making an
          extraneous copy.

        * tools/odds_dissector/odds_dissector.cpp:
        * tools/odds_dissector/odds_plugin.cpp:

          DCPS packets are properly recognized and header fields are
          exposed.

Fri Feb 12 20:54:38 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/run_test:

          Simplified, removing some less than correct syntax in the process.

        * performance-tests/Bench/src/Process.cpp:

          Updated startup checking to allow for no-publication