@@ -1,3 +1,11 @@
+Sun Feb 14 02:55:16 UTC 2010  Steven Stallion  <stallions@ociweb.com>
+
+        * tools/odds_dissector/odds_dissector.cpp:
+        * tools/odds_dissector/odds_plugin.cpp:
+
+	  Corrected minor nits; updated plugin version number to
+	  use DDS_VERSION.
+
 Sat Feb 13 23:18:43 UTC 2010  Steven Stallion  <stallions@ociweb.com>
 
         * dds/DCPS/DataSampleHeader.h:
